--- a/angularapp/src/app/components/auth/login/login.component.html
+++ b/angularapp/src/app/components/auth/login/login.component.html
@@ -1,4 +1,13 @@
-<section>
+<section style="display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+width: 100%;
+background: #00ff00; 
+background: url('assets/image/user.jpg')no-repeat; 
+background-position: center;
+background-size: cover;">
+    
     <div class="dropdown">
         <button class="dropbtn">User</button>
         <div class="dropdown-content">
