--- a/angularapp/src/app/components/auth/login/login.component.css
+++ b/angularapp/src/app/components/auth/login/login.component.css
@@ -43,15 +43,15 @@
     font-family: 'poppins',sans-serif;
 }
 section{
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     width: 100%;
     background: #00ff00; 
-    /* background: url('angularapp/src/assets/image/full of gifts with musturd black color for website.jpg')no-repeat; */
+    background: url('assets/image/user.jpg')no-repeat; 
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
 }
 .form-box{
     position: relative;
