userhomepage ad on features

--- a/angularapp/src/app/components/customerside/customerside.component.html
+++ b/angularapp/src/app/components/customerside/customerside.component.html
@@ -3,10 +3,11 @@
      <p>GiftCart</p>
     </div>
     <ul>
-    <li><a routerLink="/homepage">Homepage</a></li>
-        <li><a routerLink="/placeorder">PlaceOrder</a></li>
-            <li><a routerLink="/myorder">MyOrder</a></li>
+    <li><a routerLink="/userhomepage">Homepage</a></li>
+        <li><a routerLink="/customerorder">PlaceOrder</a></li>
+            <li><a routerLink="/cart">MyOrder</a></li>
             <li><a routerLink="/logout">Logout</a></li>
                 
 </ul>
 </nav>
+
