--- a/angularapp/src/app/components/customerside/userhomepage/userhomepage.component.html
+++ b/angularapp/src/app/components/customerside/userhomepage/userhomepage.component.html
@@ -1,12 +1,245 @@
+<!-- USER HOMEPAGE COMPONENT 
+                WORK BY- TEJASVI J-->
+
+<!-- The user homepage is designed with various features such that it is very user friendly and also helps our customer to 
+choose and order the best possible gifts for their beloved ones. -->
+
 
 <app-customerside></app-customerside>
-<section class="products">
-    <div class="product" *ngFor="let product of products; let i=index">
-    <button id=grid{{i+1}}  (click)="addToCart()">
+
+  <!--SECTION 1: To display banner using bootstrap -->
+
+  <div class="container">
+    <h2>Product Banner</h2>  
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+     <!-- Indicators -->
+       <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>  
+  
+      <!-- Wrapper for slides -->
+       <div class="carousel-inner">
+        <div class="item active">
+          <img src="https://cdn.igp.com/f_auto,q_auto,t_pnopt32prodlp/banners/birthday_d_igp_banner_20221227.jpg" alt="Birthday" style="width:100%;" (click)="navigateToViewPage('Birthday')">
+        </div>
+  
+        <div class="item">
+          <img src="https://cdn.igp.com/f_auto,q_auto,t_pnopt32prodlp/banners/rakhi_d_igp_banner_20230610.jpg" alt="rakshabandan" style="width:100%;" (click)="navigateToViewPage('rakshabandan')">
+        </div>
+      
+        <div class="item">
+          <img src="https://cdn.igp.com/f_auto,q_auto,t_pnopt32prodlp/banners/anniversary_d_igp_banner_20221226.jpg" alt="Anniversary" style="width:100%;" (click)="navigateToViewPage('Anniversary')">
+        </div>
+      </div> 
+  
+       <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div> 
+  
+
+
+<!--SECTION 2:  website workflow in 5 steps -->
+  <div class="container">
+    <div class="dashboard-heading">
+      <div class="line"></div>
+      <h1 class="heading">How to get your gifts?</h1>
+      <div class="line"></div>
+    </div>
+  
+  <div class="flex-container">
+    <div class="box">1<br>Select Gift</div>
+    <div class="box">2<br> Fill the details</div>
+    <div class="box">3 <br> Review Cart</div>
+    <div class="box">4 <br>Do payment</div>
+    <div class="box">5 <br>Gift will be delivered</div>
+  </div>
+
+
+
+
+<!--SECTION 3:  Ocassion scroller- To displaying products based on selected occassion -->
+  <div class="dashboard-heading">
+    <div class="line"></div>
+    <h1 class="heading">Gift by Occassion</h1>
+    <div class="line"></div> 
+  </div>
+  
+  <div class="image-container">
+      <div class="image-scroll">
+        <div class="image-item">
+        <img src="https://getwallpapers.com/wallpaper/full/9/b/5/282243.jpg" (click)="navigateToViewPage('Birthday')" alt="Birthday" />
+    <img src="https://getwallpapers.com/wallpaper/full/2/3/f/1128636-amazing-hd-wedding-backgrounds-2160x1440.jpg" (click)="navigateToViewPage('wedding')" alt="Wedding" />
+    <img src="https://wallpapercave.com/wp/v5rXPgi.jpg" (click)="navigateToViewPage('Aniversary')" alt="aniversary" />
+    <img src="https://neolittle.com/wp-content/uploads/2019/12/Best-Places-to-Throw-a-Baby-Shower-15-BEST-Original-Places-In-2020-scaled.jpg" (click)="navigateToViewPage('baby shower')" alt="baby shower" />
+    <img src="https://i.ytimg.com/vi/4FIG06qZ0as/maxresdefault.jpg" (click)="navigateToViewPage('house warming')" alt="house warming" />  
+    <img src="https://fthmb.tqn.com/JN7H6NErzzHMM8xb0Iwq1IppNVU=/2122x1415/filters:fill(auto,1)/GettyImages-109378462-56a484113df78cf77282cc34.jpg" (click)="navigateToViewPage('raksha bandan')" alt="rakshabandan" />
+    <img src="https://im.indiatimes.in/content/2023/Jun/happy-fathers-day-cards4_648e0e6579551.jpg?w=725&h=527&cc=1" (click)="navigateToViewPage('Fathers day')" alt="fathers day" />
+  </div>
+  </div>
+    </div>
+  <br>
+
+
+
+<!-- SECTION 4: Best seller- Displaying products with Highest Star Ratings -->
+<div class="container mt-4 mb-4">
+  <div class="dashboard-heading">
+    <div class="line"></div>
+    <h1 class="heading">Best Sellers</h1>
+    <div class="line"></div>
+  </div>
+
+  <section class="products">
+    <div class="product" *ngFor="let product of bestSellers">
       <img [src]="product.image" [alt]="product.name">
       <h2>{{ product.name }}</h2>
       <p>Rs.{{ product.price }}</p>
+      <div>
+        <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
+        <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
+      </div>
+      <ng-container *ngIf="product.stock < 10">
+      <p><span [style.color]="product.stock < 10 ? 'red' : 'black'">{{ product.stock }}</span>  Piece left, Order soon!</p>
+    </ng-container>
       <br>
-    </button>
+      <button (click)="addToCart()">Add to Cart</button> 
     </div>
   </section>
+</div>
+
+
+
+
+<!--SECTION 5: New arrivals-Displaying products that is launched very recently based on date and time  -->
+
+<div class="container mt-4 mb-4">
+  <div class="dashboard-heading">
+    <div class="line"></div>
+    <h1 class="heading">New Arrivals</h1>
+    <div class="line"></div>
+  </div>
+
+  <section class="products">
+    <div class="product" *ngFor="let product of topNewArrivals">
+      <img [src]="product.image" [alt]="product.name">
+      <h2>{{ product.name }}</h2>
+      <p>Rs.{{ product.price }}</p>
+      <div>
+        <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
+        <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
+      </div>
+      <ng-container *ngIf="product.stock < 10">
+        <p><span [style.color]="product.stock < 10 ? 'red' : 'black'">{{ product.stock }}</span>  Piece left, Order soon!</p>
+      </ng-container>
+      <p>{{ product.dateTime | date }}</p>
+      <br>
+      <button (click)="addToCart()">Add to Cart</button> 
+    </div>
+  </section>
+</div>
+
+
+<!-- SECTION 6: Gift finder feature to filter gifts based on requirements of user  -->
+<app-giftfinder></app-giftfinder>
+
+
+
+<!--SECTION 7: Relation scroller-Displaying products based on selected relation -->
+
+<div class="container mt-4 mb-4">
+  <div class="dashboard-heading">
+    <div class="line"></div>
+    <h1 class="heading">Gift by Relation</h1>
+    <div class="line"></div>
+  </div>
+<div class="image-container">
+  <div class="image-scroll">
+    <div class="image-item">
+    <img src="https://crafterscupboard.com.au/image/cache/catalog/Stock/A2Z%20Scraplets/Husband%20Script%20Word-228x228.jpg" (click)="MoveToViewPage('Husband')" alt="Birthday" />
+<img src="https://cdn11.bigcommerce.com/s-m28of/images/stencil/500x659/products/1083/3969/weldedwordfather-bold__40494.1577479135.png?c=2" (click)="MoveToViewPage('Father')" alt="Birthday" />
+<img src="https://cdn.scrapbook.com/products/cache/SBC_unp-8013_0.jpg" (click)="MoveToViewPage('Brother')" alt="brother" />
+<img src="https://thumbs.dreamstime.com/b/son-hand-written-word-text-typography-design-can-be-used-logo-branding-card-son-hand-written-word-text-typography-118956836.jpg" (click)="MoveToViewPage('Son')" alt="Birthday" />
+<img src="https://cdn10.bigcommerce.com/s-7fcgcq/products/4455/images/1306/3235-Wife__85427.1444427248.1280.1280.JPG?c=2" (click)="MoveToViewPage('Wife')" alt="Wedding" />
+<img src="https://static.vecteezy.com/system/resources/previews/000/370/036/non_2x/floral-summer-text-mom-vector-illustration-hand-drawn-capital-uppercase-with-flowers-and-leaves-and-white-calligraphy-letters-on-red-background-for-mother-s-day.jpg" (click)="MoveToViewPage('Mother')" alt="Wedding" />
+<img src="https://cdn1.vectorstock.com/i/1000x1000/86/75/friend-word-text-with-handwritten-rainbow-vibrant-vector-23928675.jpg" (click)="MoveToViewPage('Friends')" alt="friend" />
+<img src="https://i.pinimg.com/236x/60/e0/6f/60e06f90964e3545db28e8e9f69df784--sisters-images-the-words.jpg" (click)="MoveToViewPage('Sister')" alt="sister" />
+</div>
+</div>
+</div>
+
+
+
+<!-- SECTION 8: Trending products- Displaying products that is bought by huge number of customers -->
+
+<div class="container mt-4 mb-4">
+  <div class="dashboard-heading">
+    <div class="line"></div>
+    <h1 class="heading">Trending Gifts</h1>
+    <div class="line"></div>
+  </div>
+
+  <section class="products">
+    <div class="product" *ngFor="let product of trending">
+      <img [src]="product.image" [alt]="product.name">
+      <h2>{{ product.name }}</h2>
+      <p>Rs.{{ product.price }}</p>
+      <div>
+        <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
+        <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
+      </div>
+      <ng-container *ngIf="product.stock < 10">
+        <p><span [style.color]="product.stock < 10 ? 'red' : 'inherit'">{{ product.stock }}</span>  Piece left, Order soon!</p>
+      </ng-container>
+      <br>
+      <button (click)="addToCart()">Add to Cart</button> 
+    </div>
+  </section>
+</div>
+
+
+
+<!--SECTION 9: Ocassional special-Displaying products with discount on special occasions like fathers day etc -->
+
+<div class="container mt-4 mb-4">
+  <div class="dashboard-heading">
+    <div class="line"></div>
+    <h1 class="heading">Occasional special</h1>
+    <div class="line"></div>
+  </div>
+
+  <section class="products">
+    <div class="product" *ngFor="let product of occasionProducts" [ngClass]="{'low-stock': product.stock < 10}">
+      <img [src]="product.image" [alt]="product.name">
+      <h2>{{ product.name }}</h2>
+      <h2> <span [style.textDecoration]="'line-through'">Rs.{{ product.price }}</span></h2>
+      <p><span [style.color]="'red'">Rs.{{ product.revisedRate }}</span> ({{ getDiscountPercentage(product.price, product.revisedRate) }}% discount)</p>
+      <div>
+        <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
+        <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
+      </div>
+      <br>
+      <ng-container *ngIf="product.stock < 10">
+        <p><span [style.color]="product.stock < 10 ? 'red' : 'inherit'">{{ product.stock }}</span>  Piece left, Order soon!</p>
+      </ng-container>
+      <button (click)="addToCart()">Add to Cart</button> 
+    </div>
+  </section>
+</div>
+
+<!-- footer section -->
+<p class="footer">
+  Copyright &copy; Giftcart.All rights reserved.
+</p> 
+
+
+
