--- a/angularapp/src/app/components/adminside/order/order.component.html
+++ b/angularapp/src/app/components/adminside/order/order.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <div class="head">
     <nav class="navbar navbar-dark">
-        <a class="navbar-brand fa fa-camera" href="#" id="admin"><b>Photoshop</b></a>
+        <a class="navbar-brand fa fa-camera" href="#" id="admin"><strong>Photoshop</strong></a>
         <a class="navbar-brand fa fa-home" href="../admin">Home</a>
         <a class="navbar-brand fa fa-gift" href="../addgifts" id="adminGifts">Gifts</a>
         <a class="navbar-brand fa fa-search" href="../theme" id="adminThemes">Themes</a>
@@ -27,7 +27,7 @@
     <th id="userid">User id</th>
     <th id="giftname">Gift Name</th>
     <th id="giftprice">Gift Price</th>
-    <th id="giftpaid">Amount Paid</th>
+    <th id="giftpaid">Amount Paid<br>(Gifts & Themes)</th>
     <th id="giftquantity">Quantity</th>
 </thead>
 <tbody>
