admin-review changes in css and BG done

--- a/angularapp/src/app/components/adminside/adminreview/adminreview.component.html
+++ b/angularapp/src/app/components/adminside/adminreview/adminreview.component.html
@@ -1,3 +1,8 @@
+<div class="main" style="background-image: url('../../assets/image/Background.jpg');
+width:1349px;
+height:700px;
+background-position:center; 
+background-size: cover">
 <div class="head">
     <nav class="navbar navbar-dark">
       <a class="navbar-brand fa fa-camera" href="#" id="admin"><b>Photoshop</b></a>
@@ -11,26 +16,26 @@
     </div>
     <div class="col-md-12 mt-8 mb-4" id="divi">
         <div class="searchbar">
-            <a class="navbar-brand fa fa-search"></a>
-            <input type="text" placeholder="Find me here">
+            <input class="form-control" type="text" autocomplete="off" 
+            placeholder="&#61442;find me here">
         </div></div>
         <br><br><br>
         <div class="main-content">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="card card-plain">
+                        <div class="card card-plain" style="background: transparent; backdrop-filter: blur(5px); color: black;">
                           <div class="card card-nav-tabs">
                               <div class="card-header">
-                                <div class="text-center"><h3><u>CUSTOMERS FEEDBACK</u></h3></div>
+                                <div class="text-center" ><h3><u>CUSTOMERS FEEDBACK</u></h3></div>
                               </div>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-hover">
-                                        <thead class="">
+                                        <thead class="table-head">
                                             <th>
-                                            S.no
+                                            S.No
                                             </th>
                                             <th>
                                                 Customer Name
@@ -62,4 +67,5 @@
                 </div>
             </div>
           </div>          
-          
+        </div>
+        
